--- a/typst-test-letter.qmd
+++ b/typst-test-letter.qmd
@@ -1,18 +1,19 @@
 ---
-subject: "Revision of our Procurement Contract"
-name: "Jane Smith \ Regional Director"
-sender: "Jane Smith, Universal Exports, 1 Heavy Plaza, Morristown, NJ 07964"
+subject: "This is a custom Letter with a very long title"
+name: "Ana Bravo \ Regional Director"
+sender: "Ana Bravo at U of M \ Department of Public Health Sciences"
 recipient: |
   Mr. John Doe \
   Acme Corp. \
   123 Glennwood Ave \
   Quarto Creek, VA 22438 \
-sent: "Morristown, June 9th, 2023"
+sent: "Miami Florida, 2021-01-01"
 format:
   letter-typst: default
+logo: "um-vertical-rgb.png"
 ---
 
-Dear Joe,
+Dear Jose,
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus lorem quam, nec eleifend risus rhoncus sed. Fusce urna quam, placerat eu nisi eget, consequat tempor mauris. Nullam maximus est sit amet blandit venenatis. Curabitur vestibulum, nulla eget bibendum blandit, est nisi convallis massa, vel tincidunt orci mi dictum magna. Duis rhoncus neque vitae ipsum imperdiet pulvinar. 
 
